fixing the latter spacing for the small text to be compliant with Figma

--- a/src/components/Typography/Typography.module.css
+++ b/src/components/Typography/Typography.module.css
@@ -122,6 +122,7 @@
     font-size: 12px;
     line-height: 16px;
     font-weight: 500;
+    letter-spacing: -0.02em;
     --Typography-line-height: 16px;
 }
 
